b2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: b2
  name: b2
spec:
  selector:
    matchLabels:
      app: b2
  replicas: 1
  template:
    metadata:
      labels:
        app: b2
    spec:
      containers:
      - image: minio/mc:latest
        name: minio
        args: ["mirror", "--watch", "--overwrite", "minio/music/", "b2-music/jmmaloney4-music/"]
        volumeMounts:
        - mountPath: /root/.mc/config.json
          name: mc-config
          subPath: config.json
      volumes:
        - name: mc-config
          configMap:
            name: b2-mc-config
