ddclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddclient
  labels:
    app: ddclient
spec:
  selector:
    matchLabels:
      app: ddclient
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ddclient
    spec:
      containers:
      - name: ddclient
        image: linuxserver/ddclient
        volumeMounts:
          - mountPath: /config/
            name: config
          - mountPath: /config/ddclient.conf
            name: ddclient-conf
            subPath: ddclient.conf
      volumes:
        - name: ddclient-conf
          configMap:
            name: ddclient-config
        - name: config
          persistentVolumeClaim:
            claimName: ddclient-pvc
