duckdns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letsencrypt
  labels:
    app: letsencrypt
spec:
  selector:
    matchLabels:
      app: letsencrypt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: letsencrypt
    spec:
      containers:
        - name: letsencrypt
          image: linuxserver/letsencrypt:latest
        - name: duckdns
          image: linuxserver/duckdns:latest
