gitlab.yml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab
  labels:
    name: gitlab
    app: gitlab
spec:
  containers:
  - name: gitlab
    image: gitlab/gitlab-ce:latest
