mc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc
  labels:
    app: mc
spec:
  selector:
    matchLabels:
      app: mc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mc
    spec:
      containers:
        - name: mc
          image: minio/mc:latest
          command: ["sh", "-c", "while true; do sleep 86400; done"]
