roon.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roon
  labels:
    app: roon
spec:
  selector:
    matchLabels:
      app: roon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: roon
    spec:
      hostNetwork: true
      containers:
        - name: roon
          image: jmmaloney4/roon:latest
