steamos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steamos
  labels:
    app: steamos
spec:
  selector:
    matchLabels:
      app: steamos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: steamos
    spec:
      containers:
        - name: steamos
          image: tianon/steamos:latest
          volumeMounts:
          - mountPath: /data/
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: steamos
