beets.yaml
apiVersion: v1
kind: Service
metadata:
 name: beets
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8337
  selector:
    app: beets

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beets
  name: beets
spec:
  selector:
    matchLabels:
      app: beets
  replicas: 1
  template:
    metadata:
      labels:
        app: beets
    spec:
      containers:
      - image: linuxserver/beets:latest
        imagePullPolicy: Always
        name: beets
        volumeMounts:
          - mountPath: /music/
            name: beets
          - mountPath: /config/
            name: config
          - mountPath: /downloads/
            name: downloads
      - image: minio/mc:latest
        name: download
        command: ["sh", "-c", "while true; do sleep 86400; done"]
        volumeMounts:
        - mountPath: /downloads/
          name: downloads
        - mountPath: /root/.mc/config.json
          name: mc-config
          subPath: config.json
      - image: minio/mc:latest
        name: sync
        args: ["mirror", "--watch", "--overwrite", "/music/", "minio/music/"]
        volumeMounts:
        - mountPath: /music/
          name: beets
          readOnly: true
        - mountPath: /root/.mc/config.json
          name: mc-config
          subPath: config.json
      volumes:
        - name: beets
          persistentVolumeClaim:
            claimName: beets-pvc
        - name: config
          configMap:
            name: beets-config
        - name: mc-config
          configMap:
            name: beets-mc-config
        - name: downloads
          emptyDir: {}
