foldathome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foldathome
  labels:
    app: foldathome
spec:
  selector:
    matchLabels:
      app: foldathome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: foldathome
    spec:
      containers:
        - name: foldathome
          image: foldingathome/fah-gpu:latest
          args: ["--allow", "0/0", "--web-allow", "0/0"]
          resources:
            requests:
              cpu: "1000m"
            limits:
              cpu: "5000m"
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: "/fah"
              name: fah
      volumes:
      - name: fah
        persistentVolumeClaim:
          claimName: fah

---

apiVersion: v1
kind: Service
metadata:
  name: foldathome
  labels:
    app: foldathome
spec:
  type: LoadBalancer
  selector:
    app: foldathome
  ports:
    - targetPort: 7396
      port: 80
      name: web
      protocol: TCP
    # - port: 36330
    #   name: out
    #   protocol: TCP
