jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: true
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          volumeMounts:
          # - mountPath: /media/
          #   name: media
          #   readOnly: true
          - mountPath: /config/
            name: config
      volumes:
      # - name: media
      #   persistentVolumeClaim:
      #     readOnly: true
      #     claimName: torrentleech-data-pvc
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config

---

apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - port: 80
      targetPort: 8096
      name: web
      # nodePort: 30005
      protocol: TCP
