theia.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: theia
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: theia-next
#   namespace: theia
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - host: theia.your_domain
#     http:
#       paths:
#       - backend:
#           serviceName: theia-next
#           servicePort: 80
# ---

apiVersion: v1
kind: Service
metadata:
 name: theia
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: theia

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: theia
  name: theia
spec:
  selector:
    matchLabels:
      app: theia
  replicas: 1
  template:
    metadata:
      labels:
        app: theia
    spec:
      containers:
      - image: theiaide/theia:next
        imagePullPolicy: Always
        name: theia-next
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /home/project
            name: theia
      volumes:
        - name: theia
          persistentVolumeClaim:
            claimName: theia-pvc
