torrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - image: haugene/transmission-openvpn
        # tty: true
        # stdin: true
        imagePullPolicy: IfNotPresent
        name: transmission
        resources:
          requests:
            memory: "250Mi"
            cpu: "1000m"
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
        ports:
        - containerPort: 9091
          name: http
        livenessProbe:
          exec:
            command:
            - /etc/scripts/healthcheck.sh
          initialDelaySeconds: 60
          periodSeconds: 15
        volumeMounts:
        - mountPath: /data
          name: torrents
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
        - mountPath: /etc/openvpn/custom/
          name: ovpn
      restartPolicy: Always
      volumes:
      - name: torrents
        hostPath:
          path: /storage/torrents/
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: ovpn
        configMap:
          name: ovpn-file

---

apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  type: NodePort
  selector:
    app: transmission
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 9091
      protocol: TCP
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
    # - port: 9091
    #   protocol: UDP
    #   # Optional field
    #   # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
    #   nodePort: 30007
