ytdl.yaml

apiVersion: v1
kind: Service
metadata:
 name: ytdl
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: ytdl

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ytdl
  name: ytdl
spec:
  selector:
    matchLabels:
      app: ytdl
  replicas: 1
  template:
    metadata:
      labels:
        app: ytdl
    spec:
      containers:
      - image: algram/ytdl-webserver:latest
        imagePullPolicy: Always
        name: ytdl
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /home/app/public/temp
            name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: ytdl-pvc
