notes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trilium-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"   
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - notes.roomofrequirement.xyz
      secretName: notes-ingress-cert
  rules:
  - host: notes.roomofrequirement.xyz
    http:
      paths:
      - backend:
          serviceName: trilium
          servicePort: 8080
